# datatransformer

./: LICENSE  README.md  pyproject.toml  transformer.py  validation.py
hierarchical_transformer/: __init__.py  processor.py  validation.py
tests/: test_transformer.py
